@@ -14,9 +14,6 @@ import net.neoforged.gradle.dsl.common.runs.run.Run
 import org.gradle.api.tasks.JavaExec
 import java.io.File
 import java.util.Properties
-import java.util.concurrent.Executors
-import java.util.concurrent.TimeUnit
-import java.util.concurrent.atomic.AtomicBoolean
 import org.gradle.jvm.tasks.Jar
 
 plugins {
@@ -27,44 +24,35 @@ plugins {
     id("io.gitlab.arturbosch.detekt") version "1.23.6"
 }
 
-dependencyLocking {
-    lockAllConfigurations()
-}
-
 tasks.register("verifyDependencyLocks") {
     group = "verification"
     description = "Ensures dependency lockfiles are up-to-date and honored."
-    doLast {
-        configurations
-            .filter { it.isCanBeResolved }
-            .forEach { it.resolve() }
-    }
+    doLast { configurations.filter { it.isCanBeResolved }.forEach { it.resolve() } }
 }
 
-java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
-}
+java { toolchain.languageVersion.set(JavaLanguageVersion.of(21)) }
 
+// ───────────────────────────────────────────────
+// Configurable toggles
+// ───────────────────────────────────────────────
 val configurableProperties = Properties().apply {
     val configFile = rootProject.file("configurable.properties")
-    if (configFile.exists()) {
-        configFile.inputStream().use { load(it) }
-    }
+    if (configFile.exists()) configFile.inputStream().use { load(it) }
 }
-
 fun Project.resolveToggle(key: String, default: Boolean): Boolean {
     val cliOverride = findProperty(key)?.toString()?.lowercase()
     val fileValue = configurableProperties.getProperty(key)?.lowercase()
     val resolved = cliOverride ?: fileValue
     return resolved?.let { it == "true" } ?: default
 }
-
 val enableDatagen = project.resolveToggle("enableDatagen", true)
 val useMixins = project.resolveToggle("useMixins", false)
-
 extensions.extraProperties["enableDatagen"] = enableDatagen
 extensions.extraProperties["useMixins"] = useMixins
 
+// ───────────────────────────────────────────────
+// Core versioning
+// ───────────────────────────────────────────────
 val mcVersion = project.property("MC_VERSION").toString()
 val mcVersionNext = project.property("MC_VERSION_NEXT").toString()
 val neoForgeVersion = project.property("NEOFORGE_VERSION").toString()
@@ -78,23 +66,39 @@ version = modVersion
 val runs = extensions.getByName("runs") as NamedDomainObjectContainer<Run>
 val datapackRuntimeRunDir = layout.buildDirectory.dir("datapackRuntime/server")
 
-val datapackRuntimeRun = runs.register("datapackRuntime") {
+runs.register("datapackRuntime") {
     run("server")
     arguments.add("--nogui")
     shouldExportToIDE(false)
     workingDirectory(datapackRuntimeRunDir.get().asFile)
 }
 
+// ───────────────────────────────────────────────
+// Dependency setup
+// ───────────────────────────────────────────────
 repositories {
+    mavenLocal()
     mavenCentral()
+
+    // NeoForge official repos
     maven("https://maven.neoforged.net/releases")
+    maven("https://maven.neoforged.net/snapshots")
+
+    // Mojang (Minecraft) libraries
+    maven("https://libraries.minecraft.net")
+
+    // Forge mirror for Mojang artifacts and legacy mods
+    maven("https://maven.minecraftforge.net")
+
+    // Fallbacks for common missing artifacts
+    maven("https://repo.spongepowered.org/repository/maven-public/")
+    maven("https://jitpack.io")
 }
+
 
 configurations.all {
     resolutionStrategy.eachDependency {
-        if (requested.group == "io.netty") {
-            useVersion("4.1.118.Final")
-        }
+        if (requested.group == "io.netty") useVersion("4.1.118.Final")
     }
 }
 
@@ -106,6 +110,9 @@ dependencies {
     testImplementation("com.google.code.gson:gson:2.11.0")
 }
 
+// ───────────────────────────────────────────────
+// Formatting / Lint / Checks
+// ───────────────────────────────────────────────
 spotless {
     java {
         target("template/src/**/*.java", "${rootProject.projectDir}/template/src/**/*.java")
@@ -116,35 +123,17 @@ spotless {
         trimTrailingWhitespace()
         endWithNewline()
     }
-
     kotlin {
         target("template/src/**/*.kt", "${rootProject.projectDir}/template/src/**/*.kt")
         licenseHeaderFile(rootProject.file("config/spotless/license-header.kt"), "(package|import)")
-        ktlint().editorConfigOverride(
-            mapOf(
-                "indent_size" to "4",
-                "continuation_indent_size" to "4"
-            )
-        )
+        ktlint().editorConfigOverride(mapOf("indent_size" to "4", "continuation_indent_size" to "4"))
         trimTrailingWhitespace()
         endWithNewline()
     }
-
     kotlinGradle {
-        target(
-            "*.gradle.kts",
-            "../*.gradle.kts",
-            "buildSrc/**/*.gradle.kts",
-            "template/**/*.gradle.kts",
-            "versions/**/*.gradle.kts"
-        )
+        target("*.gradle.kts", "../*.gradle.kts", "buildSrc/**/*.gradle.kts", "template/**/*.gradle.kts", "versions/**/*.gradle.kts")
         targetExclude("**/build/**", "**/.gradle/**")
-        ktlint().editorConfigOverride(
-            mapOf(
-                "indent_size" to "4",
-                "continuation_indent_size" to "4"
-            )
-        )
+        ktlint().editorConfigOverride(mapOf("indent_size" to "4", "continuation_indent_size" to "4"))
         trimTrailingWhitespace()
         endWithNewline()
     }
@@ -166,9 +155,7 @@ detekt {
 tasks.withType<Detekt>().configureEach {
     reports {
         html.required.set(true)
-        txt.required.set(false)
         xml.required.set(true)
-        sarif.required.set(false)
     }
 }
 
@@ -177,205 +164,21 @@ tasks.register<Detekt>("detektMain") {
     group = "verification"
     buildUponDefaultConfig = true
     config.setFrom(detektConfig)
-    setSource(
-        files(
-            "template/src/main/kotlin",
-            rootProject.layout.projectDirectory.dir("template/src/main/kotlin")
-        )
-    )
+    setSource(files("template/src/main/kotlin", rootProject.layout.projectDirectory.dir("template/src/main/kotlin")))
     include("**/*.kt", "**/*.kts")
     exclude("**/build/**", "**/.gradle/**")
-}
-
-tasks.withType<Checkstyle>().configureEach {
-    reports {
-        xml.required.set(true)
-        html.required.set(true)
-    }
-}
-
-tasks.named<Checkstyle>("checkstyleMain") {
-    setDependsOn(emptyList<Any>())
-    classpath = files()
-    val sourceSets = extensions.findByType<org.gradle.api.tasks.SourceSetContainer>()
-    source = sourceSets?.named("main")?.get()?.allJava ?: fileTree(rootProject.layout.projectDirectory.dir("template/src/main/java")) {
-        include("**/*.java")
-        exclude("**/build/**", "**/.gradle/**")
-    }
 }
 
 tasks.named("check") {
     dependsOn("spotlessCheck", "checkstyleMain", "detektMain")
 }
 
-val datapackRuntimeLog = layout.buildDirectory.file("datapackRuntime/server/logs/datapack-runtime.log")
+tasks.withType<Test>().configureEach { useJUnitPlatform() }
+tasks.withType<JavaCompile>().configureEach { options.encoding = "UTF-8" }
 
-tasks.register("datapackRuntimeTest") {
-    group = "verification"
-    description = "Starts a headless NeoForge server to validate bundled datapacks."
-    dependsOn("build", "testClasses", "writeMinecraftClasspathServer", "writeMinecraftClasspathDatapackRuntime")
-    outputs.file(datapackRuntimeLog)
-
-    doLast {
-        val runTask = project.tasks.named<JavaExec>("runDatapackRuntime").get()
-        val runDir = datapackRuntimeRunDir.get().asFile
-
-        if (runDir.exists()) {
-            runDir.deleteRecursively()
-        }
-        runDir.mkdirs()
-
-        val logsDir = File(runDir, "logs")
-        logsDir.mkdirs()
-        val logFile = datapackRuntimeLog.get().asFile
-
-        val eulaFile = File(runDir, "eula.txt")
-        eulaFile.writeText("eula=true\n")
-
-        val serverProperties = File(runDir, "server.properties")
-        serverProperties.writeText(
-            """
-                allow-flight=true
-                difficulty=peaceful
-                enable-command-block=false
-                enforce-secure-profile=false
-                gamemode=creative
-                level-name=datapack_runtime
-                max-players=1
-                motd=The Expanse Datapack Validation
-                online-mode=false
-                simulation-distance=4
-                spawn-animals=false
-                spawn-monsters=false
-                view-distance=4
-            """.trimIndent() + "\n"
-        )
-
-        val javaExecutableName = if (System.getProperty("os.name").lowercase().contains("win")) "java.exe" else "java"
-        val javaExecutable = runTask.javaLauncher.orNull?.executablePath?.asFile?.absolutePath
-            ?: runTask.executable
-            ?: File(System.getProperty("java.home"), "bin/$javaExecutableName").absolutePath
-
-        val command = mutableListOf<String>()
-        command += javaExecutable
-        command.addAll(runTask.allJvmArgs)
-        command.addAll(
-            listOf(
-                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-                "--add-opens=java.base/java.io=ALL-UNNAMED"
-            )
-        )
-        command += listOf("-cp", runTask.classpath.asPath)
-        command += runTask.mainClass.get()
-        runTask.args?.let { command.addAll(it) }
-
-        logger.lifecycle("Datapack runtime JVM args: {}", runTask.allJvmArgs.joinToString(" "))
-        logger.lifecycle("Datapack runtime command: {}", command.joinToString(" ").take(500))
-
-        val processBuilder = ProcessBuilder(command)
-            .directory(runTask.workingDir ?: runDir)
-            .redirectErrorStream(true)
-
-        val environment = processBuilder.environment()
-        environment.putAll(runTask.environment.mapValues { it.value?.toString() ?: "" })
-
-        val process = processBuilder.start()
-        val stdinWriter = process.outputStream.bufferedWriter()
-        val stopSent = AtomicBoolean(false)
-        val failureDetected = AtomicBoolean(false)
-        val datapackFailureDetected = AtomicBoolean(false)
-
-        val readerExecutor = Executors.newSingleThreadExecutor()
-        val readerFuture = readerExecutor.submit<Unit> {
-            logFile.bufferedWriter().use { writer ->
-                process.inputStream.bufferedReader().use { reader ->
-                    while (true) {
-                        val line = reader.readLine() ?: break
-                        writer.appendLine(line)
-                        writer.flush()
-
-                        val normalized = line.lowercase()
-                        if (!stopSent.get() && normalized.contains("done") && normalized.contains("for help")) {
-                            synchronized(stdinWriter) {
-                                stdinWriter.write("stop\n")
-                                stdinWriter.flush()
-                            }
-                            stopSent.set(true)
-                        }
-
-                        val isIgnorableAuthlibError = normalized.contains("yggdrasilserviceskeyinfo")
-
-                        if ((normalized.contains("[error]") ||
-                            normalized.contains("/error]") ||
-                            normalized.contains("encountered an unexpected exception") ||
-                            normalized.contains("caught exception") ||
-                            normalized.contains("fatal") ||
-                            normalized.contains("missing required registry")) &&
-                            !isIgnorableAuthlibError
-                        ) {
-                            failureDetected.set(true)
-                        }
-
-                        if (normalized.contains("failed to reload data packs") ||
-                            normalized.contains("errors in currently selected datapacks") ||
-                            normalized.contains("couldn't load data pack") ||
-                            normalized.contains("invalid datapack")
-                        ) {
-                            datapackFailureDetected.set(true)
-                        }
-                    }
-                }
-            }
-        }
-
-        val finished = process.waitFor(180, TimeUnit.SECONDS)
-        if (!finished) {
-            if (!stopSent.get()) {
-                synchronized(stdinWriter) {
-                    stdinWriter.write("stop\n")
-                    stdinWriter.flush()
-                }
-                stopSent.set(true)
-            }
-            if (!process.waitFor(30, TimeUnit.SECONDS)) {
-                process.destroyForcibly()
-            }
-        }
-
-        readerFuture.get()
-        readerExecutor.shutdown()
-        readerExecutor.awaitTermination(30, TimeUnit.SECONDS)
-        stdinWriter.close()
-
-        val exitCode = process.exitValue()
-        if (!finished || exitCode != 0) {
-            throw GradleException("Datapack runtime server exited abnormally (code $exitCode). See log at ${logFile.absolutePath}.")
-        }
-
-        if (datapackFailureDetected.get()) {
-            throw GradleException("Datapack runtime validation reported datapack loading failures. See log at ${logFile.absolutePath}.")
-        }
-
-        if (failureDetected.get()) {
-            throw GradleException("Datapack runtime validation detected server errors. See log at ${logFile.absolutePath}.")
-        }
-    }
-}
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-}
-
-val ciBuild = providers.environmentVariable("CI").map { it.equals("true", ignoreCase = true) }.orElse(false)
-
-tasks.withType<JavaCompile>().configureEach {
-    if (ciBuild.orNull == true && !options.compilerArgs.contains("-Werror")) {
-        options.compilerArgs.add("-Werror")
-    }
-}
-
-// Expand tokens in resources (neoforge.mods.toml, pack.mcmeta, etc.)
+// ───────────────────────────────────────────────
+// Resource expansion (mods.toml / mcmeta)
+// ───────────────────────────────────────────────
 tasks.processResources {
     inputs.property("modVersion", modVersion)
     inputs.property("mcVersion", mcVersion)
@@ -406,6 +209,9 @@ tasks.processResources {
     }
 }
 
+// ───────────────────────────────────────────────
+// Publishing setup
+// ───────────────────────────────────────────────
 publishing {
     publications {
         create<MavenPublication>("mavenJava") {
@@ -414,31 +220,10 @@ publishing {
     }
 }
 
-if (!enableDatagen) {
-    tasks.configureEach {
-        if (name.contains("datagen", ignoreCase = true)) {
-            enabled = false
-        }
-    }
-}
-
-if (!useMixins) {
-    tasks.configureEach {
-        if (name.contains("mixin", ignoreCase = true)) {
-            enabled = false
-        }
-    }
-}
-
-val shouldDownloadAssets = gradle.startParameter.taskNames.any { it.contains("datapackRuntimeTest") }
-
-tasks.configureEach {
-    if (name.endsWith("DownloadAssets")) {
-        enabled = shouldDownloadAssets
-    }
-}
-// Automatically discover Stonecutter versions from the versions directory
-val configuredVersions = rootProject.file("versions")
+// ───────────────────────────────────────────────
+// Stonecutter integration
+// ───────────────────────────────────────────────
+val configuredVersions = project.rootProject.file("versions")
     .listFiles()
     ?.filter { it.isDirectory }
     ?.map { it.name }
@@ -451,17 +236,6 @@ if (configuredVersions.isEmpty()) {
 
 val primaryVersion = configuredVersions.first()
 
-allprojects {
-    tasks.configureEach {
-        if (name.equals("deepclean", ignoreCase = true)) {
-            enabled = false
-        }
-    }
-}
-
-// ───────────────────────────────────────────────
-// Build tasks
-// ───────────────────────────────────────────────
 tasks.register("buildApp") {
     group = "build"
     description = "Builds the primary Stonecutter variant ($primaryVersion)."
@@ -487,10 +261,6 @@ tasks.register("allClean") {
     dependsOn(configuredVersions.map { ":$it:clean" })
 }
 
-
-// ───────────────────────────────────────────────
-// Safe Deep Clean (preserves version folders)
-// ───────────────────────────────────────────────
 tasks.register("deepClean") {
     group = "maintenance"
     description = "Safely removes Gradle caches and build outputs without deleting version folders."
@@ -519,37 +289,57 @@ tasks.register("deepClean") {
     }
 }
 
+// ───────────────────────────────────────────────
+// Jar relocation and rename
+// ───────────────────────────────────────────────
+gradle.projectsEvaluated {
+    allprojects.forEach { sub ->
+        sub.tasks.matching { it.name.equals("jar", true) || it.name.equals("jarJar", true) }
+            .configureEach {
+                this as Jar
+                destinationDirectory.set(rootProject.layout.buildDirectory.dir("libs"))
 
-        gradle.projectsEvaluated {
-            allprojects.forEach { sub ->
-                sub.tasks.withType<Jar>().configureEach {
-                    // Force jar output to central /build/libs only
-                    destinationDirectory.set(rootProject.layout.buildDirectory.dir("libs"))
+                doLast {
+                    val mcVersion = sub.findProperty("MC_VERSION")?.toString() ?: "unknown"
+                    val modVersion = sub.findProperty("MOD_VERSION")?.toString() ?: "dev"
+                    val destDir = rootProject.layout.buildDirectory.dir("libs").get().asFile
+                    destDir.mkdirs()
 
-                    doLast {
-                        val mcVersion = sub.findProperty("MC_VERSION")?.toString() ?: "unknown"
-                        val modVersion = sub.findProperty("MOD_VERSION")?.toString() ?: "dev"
+                    val sourceFile = archiveFile.get().asFile
+                    if (sourceFile.exists()) {
+                        val sanitizedName = "TheExpanse-NeoForge+$mcVersion-$modVersion.jar"
+                        val targetFile = File(destDir, sanitizedName)
 
-                        val destDir = rootProject.layout.buildDirectory.dir("libs").get().asFile
-                        destDir.mkdirs()
+                        destDir.listFiles()
+                            ?.filter { it.name.contains("TheExpanse-NeoForge+$mcVersion") }
+                            ?.forEach { it.delete() }
 
-                        val sourceFile = archiveFile.get().asFile
-                        if (sourceFile.exists()) {
-                            val sanitizedName =
-                                "TheExpanse-NeoForge+$mcVersion-$modVersion.jar"
-                            val targetFile = File(destDir, sanitizedName)
-
-                            // Remove any existing duplicates
-                            destDir.listFiles()
-                                ?.filter { it.name.contains("TheExpanse-NeoForge+$mcVersion") }
-                                ?.forEach { it.delete() }
-
-                            sourceFile.renameTo(targetFile)
-                            println("✅ Renamed ${sub.name} jar → ${targetFile.name}")
+                        if (sourceFile.renameTo(targetFile)) {
+                            println("✅ Moved ${sub.name} jar → ${targetFile.name}")
                         } else {
-                            println("⚠️ No jar found for ${sub.name}")
+                            println("⚠️ Failed to move ${sourceFile.name} for ${sub.name}")
                         }
-                    }
+                    } else println("⚠️ No jar found for ${sub.name}")
+                }
+            }
+    }
+}
+
+// ───────────────────────────────────────────────
+// Fix: prevent dev runs from loading build/resources/main as a mod
+// ───────────────────────────────────────────────
+afterEvaluate {
+    allprojects.forEach { sub ->
+        sub.extensions.findByName("runs")?.let { runsExt ->
+            @Suppress("UNCHECKED_CAST")
+            val runs = runsExt as NamedDomainObjectContainer<Run>
+
+            runs.configureEach {
+                modSources {
+                    // remove the main sourceset to avoid the “directory mod” error
+                    sourceSets.removeIf { it.name == "main" }
                 }
             }
         }
+    }
+}
